InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentDetermination__c/vlocity_ins__ProgramEnrollmentDetermination__c.object-meta.xml
<CustomObject>
    <description>The Program Enrollment Determination object is used to track the enrollment determination of an individual’s or household’s participation in a public health insurance program. Master-detail child object of a Program Enrollment.</description>
    <label>Enrollment Determination</label>
    <nameField>
        <label>Program Enrollment Determination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Determinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>