InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentDetermination__c/fields/vlocity_ins__EligibilityDetermination__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EligibilityDetermination__c</fullName>
    <label>Eligibility Determination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>