InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentDetermination__c/fields/vlocity_ins__MostRecentDeterminationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MostRecentDeterminationDate__c</fullName>
    <formula>vlocity_ins__ProgramEnrollmentId__r.vlocity_ins__MostRecentDeterminationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Determination Date</label>
    <type>DateTime</type>
</CustomField>