InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollmentDetermination__c/fields/vlocity_ins__ProgramEnrollmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProgramEnrollmentId__c</fullName>
    <label>Program Enrollment</label>
    <referenceTo>vlocity_ins__ProgramEnrollment__c</referenceTo>
    <relationshipName>ProgEnrollmentDeterminationEnrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>